--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ incremental = true
 #codegen-units = 1
 
 [profile.bench]
-opt-level = 3
+pt-level = 3
 
 [patch.crates-io]
 plonky2_evm = { path = "evm" }
