--- a/plonky2/Cargo.toml
+++ b/plonky2/Cargo.toml
@@ -11,11 +11,13 @@ categories = ["cryptography"]
 edition = "2021"
 
 [features]
-default = ["gate_testing", "parallel", "rand_chacha", "std", "timing"]
+default = ["gate_testing", "parallel", "rand_chacha", "std", "timing", "circom_verifier", "solidity_verifier"]
 gate_testing = []
 parallel = ["hashbrown/rayon", "plonky2_maybe_rayon/parallel"]
 std = ["anyhow/std", "hex/std", "rand/std", "rand/std_rng"]
 timing = ["std"]
+circom_verifier = []
+solidity_verifier = []
 
 [dependencies]
 ahash = { version = "0.7.6", default-features = false, features = ["compile-time-rng"] } # NOTE: Be sure to keep this version the same as the dependency in `hashbrown`.
