--- a/starky/Cargo.toml
+++ b/starky/Cargo.toml
@@ -15,6 +15,8 @@ default = ["parallel", "std", "timing"]
 parallel = ["plonky2/parallel", "plonky2_maybe_rayon/parallel"]
 std = ["anyhow/std", "plonky2/std"]
 timing = ["plonky2/timing"]
+circom_verifier = ["plonky2/circom_verifier"]
+solidity_verifier = ["plonky2/solidity_verifier"]
 
 [dependencies]
 anyhow = { version = "1.0.40", default-features = false }
