--- a/u32/Cargo.toml
+++ b/u32/Cargo.toml
@@ -14,6 +14,6 @@ plonky2 = { path = "../plonky2", default-features = false, features = ["gate_tes
 rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
 
 [features]
-default = ["circom_verifier", "solidity_verifier"]
+default = []
 circom_verifier = ["plonky2/circom_verifier"]
 solidity_verifier = ["plonky2/solidity_verifier"]
